syntax = "proto3";
package kratos.api;

option go_package = "github.com/go-kratos/kratos-layout/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Auth auth = 3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message ReadDatabase {
    string driver = 1;
    string source = 2;
  }
  message WriteDatabase {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;        // Legacy, for backward compatibility
  ReadDatabase read_database = 2;  // Database for read operations
  WriteDatabase write_database = 3; // Database for write operations
  Redis redis = 4;
}

message Auth {
  string jwt_secret = 1;
  int64 access_token_expiry = 2;  // seconds, default 3600 (1 hour)
  int64 refresh_token_expiry = 3; // seconds, default 604800 (7 days)
}
